<resources>
    <string name="app_name">Soni</string>
    <string name="title">An app that digitizes farming activities, ranging from buying and selling farming-related products to providing real-time market and weather forecasts.</string>
    <string name="desc">Lorem ipsum dolor sit amet consectetur. Arcu leo eget etiam id elementum habitant. Viverra nascetur ac magna eleifend fringilla semper tincidunt. Nulla semper.</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account">Already have an account? <font color="#574244"> Sign In </font></string>
    <string name="welcome_back">Welcome back,</string>
    <string name="glad_to_meet_you_again_please_login_to_use_the_app">Glad to meet you again!, please login to use the app.</string>
    <string name="email_mobile_number">Email / Mobile Number</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="sign_in">Sign In</string>
    <string name="create_an_account">Create an account</string>
    <string name="please_type_full_information_below_and_we_can_create_your_account">Please type full information below and we can create your account</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="email_address_optional">Email address (Optional)</string>
    <string name="confirm_password">Confirm password</string>
    <string name="state">State</string>
    <string name="district">District</string>
    <string name="taluka">Taluka</string>
    <string name="village">Village</string>
    <string name="pincode">Pincode</string>
    <string name="term_of_use_and">Term of use and</string>
    <string name="privacy">privacy </string>
    <string name="notice">notice  </string>
    <string name="by_signing_up_you_agree_to_our">By signing up you agree to our</string>
    <string name="send_otp">Send OTP</string>
    <string name="otp_verification">OTP verification</string>
    <string name="please_type_otp_code_that_we_give_you">Please type OTP code that we give you</string>
    <string name="select_language">Select Language</string>
    <string name="please_select_any_one_language_given_below">Please select any one language given below</string>
    <string name="english">English</string>
    <string name="submit">Submit</string>
    <string name="mobile_number">Mobile number</string>
    <string name="forgot_pass">Forgot password</string>
    <string name="please_type_your_email_below_and_we_will_give_you_a_otp_code">Please type your email below and we will give you a OTP code</string>
    <string name="email">Email</string>
    <string name="send_code">Send Code</string>
    <string name="reset_password">Reset password</string>
    <string name="now_you_can_create_new_password_and_confirm_it_below">Now, you can create new password and confirm it below</string>
    <string name="new_password">New password</string>
    <string name="confirm_new_password">Confirm new password</string>
    <string name="confirm_new_pass">Confirm New Password</string>
    <string name="setup_completed">Setup completed</string>
    <string name="ok">OK</string>
    <string name="confim">Confirm</string>
    <string name="resend_code"> Resend Code?  </string>
    <string name="click_here"><u>Click here</u></string>
    <string name="home">Home</string>
    <string name="rent">Rent</string>
    <string name="profile">Profile</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_account">My Account</string>
    <string name="attendance">Attendance</string>
    <string name="inquiries">Inquiries</string>
    <string name="see_all">See all</string>
    <string name="add_attendance">Add Attendance</string>
    <string name="please_fill_information">Please Fill Information</string>
    <string name="enter_title">Enter Title</string>
    <string name="tractor">Tractor</string>
    <string name="enter_tractor_name">Enter Tractor Name</string>
    <string name="enter_horsepower">Enter Horsepower</string>
    <string name="enter_village_name">Enter Village Name</string>
    <string name="enter_price_per_hour">Enter Price Per Hour</string>
    <string name="upload_image_here_or">Capture or</string>
    <string name="enter_farm_name">Enter Farm Name</string>
    <string name="enter_description">Enter Description</string>
    <string name="enter_jcb_name">Enter JCB Name</string>
    <string name="enter_pincode">Enter Pincode</string>
    <string name="enter_nursery_name">Enter Nursery Name</string>
    <string name="enter_vermicompost_name">Enter Vermicompost Name</string>
    <string name="farm">Farm</string>
    <string name="nursery">Nursery</string>
    <string name="vermicompost">Vermicompost</string>
    <string name="jcb">JCB</string>
    <string name="edit_properties">Edit Properties</string>
    <string name="add_propertie">Add Properties</string>
    <string name="attendance_management">Attendance Management</string>
    <string name="add_employee">Add Employee</string>
    <string name="employee_name">Enter employee name</string>
    <string name="email_address">Enter email address</string>
    <string name="employee_id">Employee ID</string>
    <string name="add">Add</string>
    <string name="edit_employee">Edit Employee</string>
    <string name="need_to_select_filter_first">Need to Select Filter First</string>
    <string name="_12_march_2023_25_march_2023">12 March 2023 - 25 March 2023</string>
    <string name="view_attendance">View Attendance</string>
    <string name="view_by_employee">View by Employee</string>
    <string name="clear_all">Clear all</string>
    <string name="employee_attendance_list">Employee Attendance List</string>
    <string name="view_by_date">View by Date</string>
    <string name="select_from_date_to_date">Select From Date - To Date</string>
    <string name="select_employee">Select Employee</string>
    <string name="apply_filter">Apply Filter</string>
    <string name="employee_details">Employee Details</string>
    <string name="enter_employee_id">Enter employee id</string>
    <string name="department">Department</string>
    <string name="contact_details">Contact Details</string>
    <string name="email_id">Email Id</string>
    <string name="mobile_no_lbl">Mobile No.</string>
    <string name="attendance_details">Attendance Details</string>
    <string name="present_this_month">Present This Month</string>
    <string name="employee_detail">Employee Detail</string>
    <string name="browse">Browse</string>
    <string name="example_tractor">Example “Tractor”</string>
    <string name="search_employee">Search Employee</string>
    <string name="recently_added">Recently added</string>
    <string name="dec_demo">Lorem ipsum dolor sit amet consectetur. Nunc non sed mattis ipsum metus elementum mattis risus eget. Ipsum aliquam viverra risus venenatis pretium varius.</string>
    <string name="inquiry_now">Inquiry Now</string>
    <string name="current_password">Current password</string>
    <string name="Change_Language">Change Language</string>
    <string name="change_password">Change Password</string>
    <string name="terms_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="logout">Logout</string>
    <string name="delete_account">Delete Account</string>
    <string name="update">Update</string>
    <string name="accept_continue"><![CDATA[Accept & Continue]]></string>
    <string name="Inquiry">Inquiry</string>
    <string name="Edit_Properties">Edit Properties</string>
    <string name="Add_Properties">Add Properties</string>
    <string name="by_signing_up_you_agree_to_our_term_of_use_and">By signing up you agree to our Term of use and</string>
    <string name="privacy_notice">Privacy notice</string>
    <string name="enter_name">Enter Name</string>
    <string name="confirm_new_password_shmoll">Confirm new password</string>
    <string name="per_day">Per Day</string>
    <string name="add_your_name">Please enter your name.</string>
    <string name="add_first_name">Please enter your first name.</string>
    <string name="add_last_name">Please enter your last name.</string>
    <string name="add_mobile_number">Please enter your mobile number.</string>
    <string name="add_password">Please enter password.</string>
    <string name="add_confirm_password">Please enter confirm password.</string>
    <string name="add_state">Please enter state.</string>
    <string name="add_district">Please enter district.</string>
    <string name="add_taluka">Please enter taluka.</string>
    <string name="add_village">Please enter village.</string>
    <string name="add_pincode">Please enter pincode.</string>
    <string name="invalid_first_name">Please enter valid first name.</string>
    <string name="invalid_last_name">Please enter valid last name.</string>
    <string name="invalid_email">Please enter valid email address.</string>
    <string name="invalid_phone_number">Please enter valid mobile number.</string>
    <string name="invalid_password">Please enter valid password.</string>
    <string name="invalid_confirm_password">Please enter valid confirm password.</string>
    <string name="invalid_passwords">Password and confirm password does not match.</string>
    <string name="invalid_pincode">Please enter a valid pincode.</string>
    <string name="internet_error">There is no internet connection, Please check your  network.</string>
    <string name="add_otp_mobile">Please enter OTP received on your registered mobile number.</string>
    <string name="add_otp_email">Please enter OTP received on your registered email.</string>
    <string name="invalid_otp">Please enter OTP received from your registered mobile number or email.</string>
    <string name="otp_expired">OTP expired.</string>
    <string name="add_email">Please enter your email address.</string>
    <string name="add_email_or_phone">Please enter email or phone number.</string>
    <string name="add_trackor_name">Please add tractor name.</string>
    <string name="add_tractor_horsepower">Please add tractor horsepower.</string>
    <string name="add_property_village">Please add village name.</string>
    <string name="add_price">Please add price.</string>
    <string name="add_description">Please add description.</string>
    <string name="add_jcb_name">Please add JCB name.</string>
    <string name="add_title">Please add title.</string>
    <string name="add_name">Please add name.</string>
    <string name="add_horsepower">Please add horsepower.</string>
    <string name="add_propery_pincode">Please add pincode.</string>
    <string name="add_farm_size">Please add no of acres.</string>
    <string name="add_farm_survey">Please add survey number.</string>
    <string name="add_porperty_type">Please select property type.</string>
    <string name="add_product_type">Please select product type.</string>
    <string name="add_images">Please add images.</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="delete_property">Delete property</string>
    <string name="add_employee_name">Please add employee name.</string>
    <string name="add_employee_id">Please add employee id.</string>
    <string name="add_email_address">Please add email address.</string>
    <string name="add_mobile">Please add mobile number.</string>
    <string name="add_employee_dept">Please add department.</string>
    <string name="are_you_sure_you_want_to_delete">Are you sure you want to delete ?</string>
    <string name="congratulations">Congratulations!</string>
    <string name="you_are_all_set_up">You are all set up!</string>
    <string name="missing_information">Missing Information</string>
    <string name="please_add_the_required_information_to_the_profile">Please Add the required information to the profile</string>
</resources>