<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center"
    android:gravity="center"
    android:background="@color/transparent"
    android:layout_height="match_parent"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"

    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:background="@drawable/dialog_back"
        android:orientation="vertical">
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_10sdp" />


        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/kumbh_sans_bold"
            android:text="@string/delete_property"

            android:textColor="@color/Grey100"
            android:textSize="@dimen/_18sdp" />


        <TextView
            android:id="@+id/tv_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginVertical="@dimen/_10sdp"
            android:fontFamily="@font/kumbh_sans_bold"
            android:gravity="center"
            android:text="@string/are_you_sure_you_want_to_delete"
            android:textColor="@color/Grey100"
            android:textSize="@dimen/_14sdp" />


        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_10sdp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_14sdp"
                android:id="@+id/tv_yes"
                android:fontFamily="@font/kumbh_sans_regular"
                android:textColor="@color/White20"
                android:text="@string/delete"
                android:paddingHorizontal="@dimen/_10sdp"
                android:paddingVertical="@dimen/_12sdp"
                android:gravity="center"
                android:background="@drawable/btn_forget_password"

                />
            <View
                android:id="@+id/viewSpacer"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_14sdp"
                android:id="@+id/tv_no"
                android:fontFamily="@font/kumbh_sans_regular"
                android:textColor="@color/White20"
                android:text="@string/cancel"
                android:paddingHorizontal="@dimen/_10sdp"
                android:paddingVertical="@dimen/_12sdp"
                android:gravity="center"
                android:background="@drawable/btn_forget_password"

                />
            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"/>
        </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_10sdp" />

    </LinearLayout>
</LinearLayout>
