<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.LoginActivity">

    <include layout="@layout/actionbar_layout_with_icon" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_10sdp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:fontFamily="@font/kumbh_sans_bold"
        android:text="@string/welcome_back"
        android:textColor="@color/Grey100"
        android:textSize="@dimen/_20sdp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_10sdp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:fontFamily="@font/kumbh_sans_medium"
        android:text="@string/glad_to_meet_you_again_please_login_to_use_the_app"
        android:textColor="@color/Grey80"
        android:textSize="@dimen/_12sdp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_20sdp" />

    <LinearLayout
        android:id="@+id/ll_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:paddingHorizontal="@dimen/_10sdp"
        android:paddingVertical="@dimen/_5sdp"
        android:background="@drawable/txt_field_sign_screen">
    <ImageView
        android:layout_width="@dimen/_40sdp"
        android:layout_height="@dimen/_40sdp"
        android:padding="@dimen/_10sdp"
        android:src="@drawable/call_icon"
        android:layout_marginEnd="@dimen/_5sdp"/>

        <EditText
            android:id="@+id/et_email"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:maxLength="10"
            android:background="@color/transparent"
            android:fontFamily="@font/kumbh_sans_regular"
            android:hint="@string/mobile_number"
            android:imeOptions="actionNext"
            android:digits="0123456789"
            android:inputType="numberSigned"
            android:textSize="@dimen/_14sdp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_20sdp" />

    <LinearLayout
        android:visibility="gone"
        android:id="@+id/ll_password"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:paddingHorizontal="@dimen/_10sdp"
        android:paddingVertical="@dimen/_5sdp"
        android:background="@drawable/txt_field_sign_screen">
    <ImageView
        android:layout_width="@dimen/_40sdp"
        android:layout_height="@dimen/_40sdp"
         android:padding="@dimen/_10sdp"
        android:src="@drawable/password_icon"
        android:layout_marginEnd="@dimen/_5sdp"/>
     <EditText
         android:id="@+id/et_password"
         android:layout_width="0dp"
         android:layout_weight="1"
         android:layout_height="match_parent"
         android:background="@color/transparent"
         android:hint="@string/password"
         android:textSize="@dimen/_14sdp"
         android:inputType="textPassword"
         android:fontFamily="@font/kumbh_sans_regular"
         android:imeOptions="actionDone"
         android:maxLength="20"
      />
        <ImageView
            android:id="@+id/iv_show_password"
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_40sdp"
             android:padding="@dimen/_10sdp"
            android:src="@drawable/shwo_password_icon"
            android:layout_marginStart="@dimen/_5sdp"/>

    </LinearLayout>

    <TextView
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_gravity="end"
        android:id="@+id/txt_forget_password"
        android:textSize="@dimen/_14sdp"
        android:fontFamily="@font/kumbh_sans_regular"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:textColor="@color/Grey100"
        android:text="@string/forgot_password"/>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.facebook.shimmer.ShimmerFrameLayout
            android:id="@+id/txt_send_otp_shimmer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:textSize="@dimen/_14sdp"
                android:fontFamily="@font/kumbh_sans_regular"
                android:textColor="@color/White20"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:paddingHorizontal="@dimen/_10sdp"
                android:paddingVertical="@dimen/_12sdp"
                android:gravity="center"
                android:background="@drawable/btn_forget_password"
                />
        </com.facebook.shimmer.ShimmerFrameLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:textSize="@dimen/_14sdp"
            android:id="@+id/txt_signin"
            android:fontFamily="@font/kumbh_sans_regular"
            android:textColor="@color/White20"
            android:text="@string/sign_in"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:paddingHorizontal="@dimen/_10sdp"
            android:paddingVertical="@dimen/_12sdp"
            android:gravity="center"
            android:background="@drawable/btn_forget_password"
            />
    </RelativeLayout>
</LinearLayout>