<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/transparent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingLeft="10dp"
    android:paddingRight="10dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/missing_information"
        android:fontFamily="@font/kumbh_sans_bold"
        android:textColor="@color/Primary100"
        android:textSize="@dimen/_16sdp"
        android:gravity="center"
        android:layout_marginVertical="@dimen/_10sdp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/please_add_the_required_information_to_the_profile"
        android:fontFamily="@font/kumbh_sans_bold"
        android:textColor="@color/black"
        android:textSize="@dimen/_14sdp"
        android:layout_marginHorizontal="@dimen/_15sdp"
        android:layout_marginVertical="@dimen/_10sdp"/>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_missing_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_15sdp"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_20sdp" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <com.facebook.shimmer.ShimmerFrameLayout
        android:id="@+id/sf_shimmer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:background="@drawable/btn_forget_password"
            android:fontFamily="@font/kumbh_sans_regular"
            android:gravity="center"
            android:paddingHorizontal="@dimen/_10sdp"
            android:paddingVertical="@dimen/_12sdp"

            android:textColor="@color/White20"
            android:textSize="@dimen/_14sdp" />
    </com.facebook.shimmer.ShimmerFrameLayout>

    <TextView
        android:id="@+id/txt_ok"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:background="@drawable/btn_forget_password"
        android:fontFamily="@font/kumbh_sans_regular"
        android:gravity="center"
        android:paddingHorizontal="@dimen/_10sdp"
        android:paddingVertical="@dimen/_12sdp"
        android:text="@string/submit"
        android:textColor="@color/White20"
        android:textSize="@dimen/_14sdp" />
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_20sdp" />

</LinearLayout>

