<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.ResetPasswordActivity">


    <include layout="@layout/actionbar_layout_with_icon" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_10sdp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:fontFamily="@font/kumbh_sans_bold"
        android:text="@string/reset_password"
        android:textColor="@color/Grey100"
        android:textSize="@dimen/_20sdp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_10sdp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:fontFamily="@font/kumbh_sans_medium"
        android:text="@string/now_you_can_create_new_password_and_confirm_it_below"
        android:textColor="@color/Grey80"
        android:textSize="@dimen/_12sdp" />


    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_20sdp" />

    <LinearLayout
        android:id="@+id/ll_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:paddingHorizontal="@dimen/_10sdp"
        android:paddingVertical="@dimen/_5sdp"
        android:background="@drawable/txt_field_sign_screen">
        <ImageView
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_40sdp"
            android:padding="@dimen/_10sdp"
            android:src="@drawable/password_icon"
            android:layout_marginEnd="@dimen/_5sdp"/>
        <EditText
            android:id="@+id/et_password"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:background="@null"
            android:hint="@string/new_password"
            android:textSize="@dimen/_14sdp"
            android:fontFamily="@font/kumbh_sans_regular"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:maxLength="20"
            />
        <ImageView
            android:id="@+id/iv_show_password"
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_40sdp"
            android:padding="@dimen/_10sdp"
            android:src="@drawable/shwo_password_icon"
            android:layout_marginStart="@dimen/_5sdp"/>

    </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_20sdp" />

    <LinearLayout
        android:id="@+id/ll_confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:paddingHorizontal="@dimen/_10sdp"
        android:paddingVertical="@dimen/_5sdp"
        android:background="@drawable/txt_field_sign_screen">
        <ImageView
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_40sdp"
            android:padding="@dimen/_10sdp"
            android:src="@drawable/password_icon"
            android:layout_marginEnd="@dimen/_5sdp"/>
        <EditText
            android:id="@+id/et_c_password"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:background="@null"
            android:hint="@string/confirm_new_password"
            android:textSize="@dimen/_14sdp"
            android:fontFamily="@font/kumbh_sans_regular"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:maxLength="20"
            />
        <ImageView
            android:id="@+id/iv_show_c_password"
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_40sdp"
            android:padding="@dimen/_10sdp"
            android:src="@drawable/shwo_password_icon"
            android:layout_marginStart="@dimen/_5sdp"/>

    </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_20sdp" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <com.facebook.shimmer.ShimmerFrameLayout
        android:id="@+id/txt_send_otp_shimmer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_14sdp"
            android:fontFamily="@font/kumbh_sans_regular"
            android:textColor="@color/White20"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:paddingHorizontal="@dimen/_10sdp"
            android:paddingVertical="@dimen/_12sdp"
            android:gravity="center"
            android:background="@drawable/btn_forget_password"
            />
    </com.facebook.shimmer.ShimmerFrameLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/_14sdp"
        android:id="@+id/txt_confim_password"
        android:fontFamily="@font/kumbh_sans_regular"
        android:textColor="@color/White20"
        android:text="@string/confirm_new_pass"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:paddingHorizontal="@dimen/_10sdp"
        android:paddingVertical="@dimen/_12sdp"
        android:gravity="center"
        android:background="@drawable/btn_forget_password"
        />
    </RelativeLayout>
</LinearLayout>